--- a/DevFramework.Core/DevFramework.Core.csproj
+++ b/DevFramework.Core/DevFramework.Core.csproj
@@ -73,6 +73,7 @@
     <Compile Include="DataAccess\EntityFramework\EfQueryableRepository.cs" />
     <Compile Include="DataAccess\IEntityRepository.cs" />
     <Compile Include="DataAccess\IQueryableRepository.cs" />
+    <Compile Include="DataAccess\NHibernate\NhQueryableRepository.cs" />
     <Compile Include="DataAccess\NHibernate\NhEntityRepositoryBase.cs" />
     <Compile Include="DataAccess\NHibernate\NHibernateHelper.cs" />
     <Compile Include="Entities\IEntity.cs" />
