--- a/DevFramework.Northwind.Business/DevFramework.Northwind.Business.csproj
+++ b/DevFramework.Northwind.Business/DevFramework.Northwind.Business.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Abstract\IProductService.cs" />
     <Compile Include="Concrete\Managers\ProductManager.cs" />
     <Compile Include="DependencyResolvers\Ninject\BusinessModule.cs" />
+    <Compile Include="DependencyResolvers\Ninject\ValidationModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules\FluentValidation\ProductValidator.cs" />
   </ItemGroup>
