--- a/DevFramework.Core/packages.config
+++ b/DevFramework.Core/packages.config
@@ -4,6 +4,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="FluentValidation" version="10.3.3" targetFramework="net472" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net472" />
+  <package id="log4net" version="2.0.12" targetFramework="net472" />
   <package id="NHibernate" version="5.3.10" targetFramework="net472" />
   <package id="PostSharp" version="4.2.17" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net472" />
