Log4Net.Config impelemtasyonu

--- a/DevFramework.Northwind.Mvc.WebUI/DevFramework.Northwind.Mvc.WebUI.csproj
+++ b/DevFramework.Northwind.Mvc.WebUI/DevFramework.Northwind.Mvc.WebUI.csproj
@@ -101,6 +101,13 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
+    <Content Include="log4net.config" />
+    <Content Include="log4net.Debug.config">
+      <DependentUpon>log4net.config</DependentUpon>
+    </Content>
+    <Content Include="log4net.Release.config">
+      <DependentUpon>log4net.config</DependentUpon>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
