MVC SetControllerFactory implementasyonu

--- a/DevFramework.Northwind.Mvc.WebUI/DevFramework.Northwind.MvcWebUI.csproj
+++ b/DevFramework.Northwind.Mvc.WebUI/DevFramework.Northwind.MvcWebUI.csproj
@@ -45,6 +45,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="PostSharp, Version=4.2.17.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <HintPath>..\packages\PostSharp.4.2.17\lib\net35-client\PostSharp.dll</HintPath>
       <Private>True</Private>
@@ -130,6 +133,10 @@
     <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DevFramework.Core\DevFramework.Core.csproj">
+      <Project>{E8103FDF-3BEC-4867-9679-7263A0B7A5B8}</Project>
+      <Name>DevFramework.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DevFramework.Northwind.Business\DevFramework.Northwind.Business.csproj">
       <Project>{253F91E8-6A9E-4554-B47F-9D95CDEB2578}</Project>
       <Name>DevFramework.Northwind.Business</Name>
