--- a/DevFramework.Northwind.WebApi/DevFramework.Northwind.WebApi.csproj
+++ b/DevFramework.Northwind.WebApi/DevFramework.Northwind.WebApi.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="MessageHandlers\AuthenticationHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
