--- a/DevFramework.Northwind.MvcAngularUI/tsScripts/src/tsconfig.json
+++ b/DevFramework.Northwind.MvcAngularUI/tsScripts/src/tsconfig.json
@@ -8,6 +8,7 @@
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
     "noImplicitAny": true,
+    "outDir": "../Scripts/",
     "suppressImplicitAnyIndexErrors": true,
     "typeRoots": [
       "../node_modules/@types/"
