--- a/DevFramework.Northwind.MvcAngularUI/DevFramework.Northwind.MvcAngularUI.csproj
+++ b/DevFramework.Northwind.MvcAngularUI/DevFramework.Northwind.MvcAngularUI.csproj
@@ -90,7 +90,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="gulpfile.js" />
+    <Content Include="Scripts\systemjs.config.js" />
     <Content Include="tsScripts\src\app\app.component.css" />
     <Content Include="tsScripts\src\app\app.component.html" />
     <Content Include="tsScripts\src\index.html" />
@@ -99,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -111,6 +115,10 @@
     <Content Include="tsScripts\src\tsconfig.app.json" />
     <Content Include="tsScripts\src\tsconfig.json" />
     <Content Include="tsScripts\src\tsconfig.spec.json" />
+    <Content Include="Views\_Layout.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -120,9 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
-    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="tsScripts\src\app\app.component.spec.ts" />
